--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/demo?characterEncoding=utf8&useSSL=false&autoReconnect=true
+    url: jdbc:mysql://192.168.5.231:3306/demo?characterEncoding=utf8&useSSL=false&autoReconnect=true
     username: root
-    password: dmtds
+    password: 123456
 
 server:
   port: 8080
